# frida-test-app-rust

./: Cargo.toml  shell.nix
examples/: dummy.rs
src/: frida.rs  lib.rs  main.rs  storage.rs
