[package]
name = "frida-test-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vodozemac = "0.3.0"
serde_json = "*"
serde = "*"
lmdb-rkv = "0.14.0"
rust_socketio = "0.4.0"
reqwest = { version = "0.11.12", features = [ "json" ] }
